--- a/package.json
+++ b/package.json
@@ -1,31 +1,35 @@
 {
   "name": "reactivator",
   "description": "A framework-independent package to transform data elements into reactive ones.",
+  "author": "Paul Whittemore <dev@appurist.com>",
+  "license": "MIT",
   "version": "0.1.0",
-  "main": "dist/index.js",
-  "scripts": {
-    "clean": "shx rm -rf dist && shx mkdir -p dist",
-    "build": "shx mkdir -p dist && shx cp README.md dist && shx cp src/index.js dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/appurist/reactivator.git"
+  "type": "module",
+  "main": "dist/reactivator.cjs.js",
+  "module": "dist/reactivator.esm.js",
+  "browser": "dist/reactivator.umd.js",
+  "homepage": "https://github.com/appurist/reactivator",
+  "repository": "https://github.com/appurist/reactivator.git",
+  "bugs": {
+    "url": "https://github.com/appurist/reactivator/issues"
   },
   "keywords": [
     "reactive",
     "javascript"
   ],
-  "author": "Paul Whittemore <dev@appurist.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/appurist/reactivator/issues"
+  "scripts": {
+    "clean": "shx rm -rf dist && shx mkdir -p dist",
+    "build": "rollup -c",
+    "prebuild": "run-s clean",
+    "dev": "rollup -c -w"
   },
-  "homepage": "https://github.com/appurist/reactivator",
+  "dependencies": {},
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.0.1",
+    "@rollup/plugin-node-resolve": "^7.0.0",
+    "mkdirp": "^1.0.4",
+    "npm-run-all": "^4.1.5",
+    "rollup": "^1.29.0",
     "shx": "^0.3.2"
-  },
-  "dependencies": {
-    "mkdirp": "^1.0.4"
   }
 }
