Hopefully a simpler test example, updated readme, cleanup.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Program",
+      "name": "Launch test.mjs",
       "skipFiles": [
         "<node_internals>/**"
       ],
