--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dev": "rollup -c -w",
     "build": "rollup -c",
     "postbuild": "shx cp README.md dist",
-    "test": "node ./src/test.mjs"
+    "example": "node ./src/example.mjs",
+    "test": "cypress run"
   },
   "homepage": "https://github.com/appurist/reactivator",
   "repository": {
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
+    "cypress": "^5.2.0",
     "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.29.0",
