--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}\\src\\test.mjs"
+      "program": "${workspaceFolder}\\examples\\ex-reactive2.mjs"
     }
   ]
 }
