--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "postbuild": "shx cp README.md dist",
     "example": "node ./src/example.mjs",
     "test:record": "cypress run --record",
-    "test": "cypress run"
+    "test": "cypress run",
+    "prerelease": "run-s clean build",
+    "release": "release-it"
   },
   "homepage": "https://appurist.github.io/reactivator/",
   "repository": {
@@ -43,9 +45,11 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
+    "auto-changelog": "^2.2.0",
     "cypress": "^5.2.0",
     "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
+    "release-it": "^14.0.3",
     "rollup": "^1.29.0",
     "shx": "^0.3.2"
   }
