--- a/.release-it.json
+++ b/.release-it.json
@@ -1,12 +1,12 @@
 {
-  "hooks": {
-    "after:bump": "npx auto-changelog -p"
-  },
   "github": {
     "release": true
   },
+  "hooks": {
+    "after:bump": "npx auto-changelog -p --commit-limit false"
+  },
   "git": {
-    "commitMessage": "chore: release v${version}",
-    "changelog": "npx auto-changelog --stdout --commit-limit false -u --template https://raw.githubusercontent.com/release-it/release-it/master/templates/changelog-compact.hbs"
+    "commitMessage": "Release v${version}",
+    "changelog": "npx auto-changelog --stdout --commit-limit false"
   }
 }
