Fixed changelog generation and updated it.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "example": "node ./src/example.mjs",
     "test:record": "cypress run --record",
     "test": "cypress run",
-    "changelog": "run-s auto-changelog -p",
+    "changelog": "auto-changelog -p",
     "prerelease": "run-s clean build",
     "release": "release-it"
   },
