--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "postbuild": "shx cp README.md dist",
     "example": "node ./src/example.mjs",
     "test:record": "cypress run --record",
-    "test": "cypress run",
+    "test": "cypress run --record false",
     "changelog": "auto-changelog -p",
     "prerelease": "run-s clean build",
     "release": "release-it"
