--- a/package.json
+++ b/package.json
@@ -42,16 +42,17 @@
     "live",
     "simple"
   ],
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.1",
-    "@rollup/plugin-node-resolve": "^7.0.0",
-    "auto-changelog": "^2.2.0",
-    "cypress": "^5.2.0",
+    "@rollup/plugin-commonjs": "^21",
+    "@rollup/plugin-node-resolve": "^13",
+    "auto-changelog": "^2.3.0",
+    "cypress": "^9.2.0",
     "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
     "release-it": "^14.0.3",
-    "rollup": "^1.29.0",
+    "rollup": "^2.63.0",
     "shx": "^0.3.2"
   }
 }
